[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comtrade"
version = "0.2.0"
dependencies = [
    "numpy>=2.2.0",
    "pandas>=2.2.3",
]
requires-python = ">= 3.10"
authors = [
  {name = "dparrini", email = ""},
]
description = "TODO"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]


[project.urls]
Repository = "https://github.com/dparrini/python-comtrade"

[tool.hatch.build.targets.wheel]
include = [
  "comtrade.py",
]

[tool.ruff]
line-length = 80
